# tauri-plugin-purchases

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/: PurchasesPlugin.kt
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: PurchasesPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_entitlements.toml  get_products.toml  get_subscription_status.toml  manage_subscriptions.toml  start_purchase_updates.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
