[package]
name = "tauri-plugin-purchases"
version = "0.2.1"
authors = ["spicavi <avisaksham@gmail.com>"]
license = "MIT"
description = "In-app subscriptions and purchases for Tauri 2 apps — StoreKit 2 on iOS, Google Play Billing on Android."
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
repository = "https://github.com/spicavi/tauri-plugin-purchases"
# crates.io: max 5, only [a-z0-9-_], must start with a letter, ≤20 chars each.
keywords = ["tauri", "tauri-plugin", "storekit", "iap", "subscriptions"]
categories = ["api-bindings"]
exclude = [
  "/examples",
  "/dist-js",
  "/guest-js",
  "/node_modules",
  "/.tauri",
  "/ios/.build",
  "/ios/.tauri",
  "/android/build",
  "/android/.gradle",
  "/android/.tauri",
  "package.json",
  "pnpm-lock.yaml",
  "tsconfig.json",
  "rollup.config.js",
]
links = "tauri-plugin-purchases"

[dependencies]
tauri = { version = "2.10" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }
